examples/negative-tests/sum4_noann.imp
sum4(n, p) 
[ <#n: int, p: int ref (0, n - 1, 0.5) > -> 
  <#n: int, p: int ref (0, n - 1, 0.0) | int> ]
{
  if n <= 0 then {
    0
  } else {
    if n = 1 then {
      let x = *p in
      x
    } else {
      let m = n / 2 in
      let k = n - m in
      let q = p + m in
      let a = sum4(m, p) in
      let b = sum4(k, q) in
      alias(q = p + m);
      let z = a + b in
      z
    } 
  }
}

{
  let p = mkarray 3 in
  p := 0;
  let q = p + 1 in
  q := 1;
  let r = q + 1 in
  r := 2;
  alias(r = q + 1);
  alias(q = p + 1);
  let m = 3 in
  let x = sum4(m, p) in
  assert(x >= 0);
  ()
}
